Fixed: spacing

--- a/src/App.css
+++ b/src/App.css
@@ -178,7 +178,7 @@ body {
   line-height: 50px;
   margin: 0;
   padding: 0;
-  min-width: 210px;
+  min-width: 250px;
   text-align: left;
 }
 
@@ -193,6 +193,7 @@ body {
 
 .text-wrapper {
   max-width: 1000px;
+  margin-top: 150px;
 }
 
 .text-preview {
